--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,5 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <meta-data android:name="android.support.VERSION" tools:replace="android:value" android:value="16" />
+    <meta-data android:name="android.support.VERSION" tools:replace="android:value" android:value="26.0.0-alpha1" />
 </manifest>
